parser/src/snapshots/squawk_parser__parse__tests__parsing_create_table_using_like.snap
---
source: parser/src/parse.rs
expression: res

---
Ok(
    [
        RawStmt {
            stmt: CreateStmt(
                CreateStmt {
                    relation: RangeVar {
                        catalogname: None,
                        schemaname: None,
                        relname: "core_bar",
                        inh: true,
                        relpersistence: "p",
                        alias: None,
                        location: 13,
                    },
                    table_elts: [
                        TableLikeClause(
                            TableLikeClause {
                                relation: RangeVar {
                                    catalogname: None,
                                    schemaname: None,
                                    relname: "core_foo",
                                    inh: true,
                                    relpersistence: "p",
                                    alias: None,
                                    location: 28,
                                },
                                options: 6,
                            },
                        ),
                    ],
                    inh_relations: [],
                    partbound: None,
                    partspec: None,
                    of_typename: None,
                    constraints: [],
                    options: [],
                    oncommit: Noop,
                    tablespacename: None,
                    if_not_exists: false,
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                78,
            ),
        },
    ],
)
