parser/src/snapshots/squawk_parser__parse__tests__parsing_drop_table_space_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DropTableSpaceStmt(
                    Object({
                        "tablespacename": String(
                            "dbspace",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    23,
                ),
            },
        ),
    ],
)
