parser/src/snapshots/squawk_parser__parse__tests__parsing_grant_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: GrantStmt(
                    Object({
                        "behavior": String(
                            "DROP_RESTRICT",
                        ),
                        "grantees": Array([
                            Object({
                                "RoleSpec": Object({
                                    "location": Number(
                                        25,
                                    ),
                                    "roletype": String(
                                        "ROLESPEC_PUBLIC",
                                    ),
                                }),
                            }),
                        ]),
                        "is_grant": Bool(
                            true,
                        ),
                        "objects": Array([
                            Object({
                                "RangeVar": Object({
                                    "inh": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        16,
                                    ),
                                    "relname": String(
                                        "films",
                                    ),
                                    "relpersistence": String(
                                        "p",
                                    ),
                                }),
                            }),
                        ]),
                        "objtype": String(
                            "OBJECT_TABLE",
                        ),
                        "privileges": Array([
                            Object({
                                "AccessPriv": Object({
                                    "priv_name": String(
                                        "insert",
                                    ),
                                }),
                            }),
                        ]),
                        "targtype": String(
                            "ACL_TARGET_OBJECT",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    31,
                ),
            },
        ),
    ],
)
