parser/src/snapshots/squawk_parser__parse__tests__parsing_insert_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: InsertStmt(
                Object({
                    "override": String(
                        "OVERRIDING_NOT_SET",
                    ),
                    "relation": Object({
                        "inh": Bool(
                            true,
                        ),
                        "location": Number(
                            12,
                        ),
                        "relname": String(
                            "table_name",
                        ),
                        "relpersistence": String(
                            "p",
                        ),
                    }),
                    "selectStmt": Object({
                        "SelectStmt": Object({
                            "limitOption": String(
                                "LIMIT_OPTION_DEFAULT",
                            ),
                            "op": String(
                                "SETOP_NONE",
                            ),
                            "valuesLists": Array([
                                Object({
                                    "List": Object({
                                        "items": Array([
                                            Object({
                                                "A_Const": Object({
                                                    "location": Number(
                                                        31,
                                                    ),
                                                    "val": Object({
                                                        "Integer": Object({
                                                            "ival": Number(
                                                                1,
                                                            ),
                                                        }),
                                                    }),
                                                }),
                                            }),
                                            Object({
                                                "A_Const": Object({
                                                    "location": Number(
                                                        34,
                                                    ),
                                                    "val": Object({
                                                        "Integer": Object({
                                                            "ival": Number(
                                                                2,
                                                            ),
                                                        }),
                                                    }),
                                                }),
                                            }),
                                            Object({
                                                "A_Const": Object({
                                                    "location": Number(
                                                        37,
                                                    ),
                                                    "val": Object({
                                                        "Integer": Object({
                                                            "ival": Number(
                                                                3,
                                                            ),
                                                        }),
                                                    }),
                                                }),
                                            }),
                                        ]),
                                    }),
                                }),
                            ]),
                        }),
                    }),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                39,
            ),
        },
    ],
)
