parser/src/snapshots/squawk_parser__parse__tests__reassign_owned_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: ReassignOwnedStmt(
                    Object({
                        "newrole": Object({
                            "RoleSpec": Object({
                                "location": Number(
                                    31,
                                ),
                                "rolename": String(
                                    "new_role",
                                ),
                                "roletype": Number(
                                    0,
                                ),
                            }),
                        }),
                        "roles": Array([
                            Object({
                                "RoleSpec": Object({
                                    "location": Number(
                                        19,
                                    ),
                                    "rolename": String(
                                        "old_role",
                                    ),
                                    "roletype": Number(
                                        0,
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    39,
                ),
            },
        ),
    ],
)
